--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,7 +154,7 @@ set (LIBRARY_NAME "TimberWolf")
 add_library (${LIBRARY_NAME} SHARED ${SOURCES})
 set_target_properties (${LIBRARY_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 set_target_properties (${LIBRARY_NAME} PROPERTIES SOVERSION ${TimberWolf_VERSION_MAJOR})
-set_target_properties (${LIBRARY_NAME} PROPERTIES PUBLIC_HEADER ${HEADERS})
+set_target_properties (${LIBRARY_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS}")
 set_target_properties (${LIBRARY_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
 configure_file(
     ${PROJECT_SOURCE_DIR}/TimberWolf.pc.in
@@ -174,7 +174,7 @@ target_link_libraries (${LIBRARY_NAME} ${OPENGL_gl_LIBRARY} glfw GLEW glm)
 include (GNUInstallDirs)
 install (TARGETS ${LIBRARY_NAME}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/TimberWolf
 )
 install(FILES ${CMAKE_BINARY_DIR}/TimberWolf.pc DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)
 
