--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ CPackConfig.cmake
 CPackSourceConfig.cmake
 src/config.hpp
 TimberWolf.pc
+TimberWolfConfig.cmake
+TimberWolfConfigVersion.cmake
+TimberWolfTargets.cmake
 Makefile
 Doxyfile
 /docs
