--- a/TimberWolfConfig.cmake.in
+++ b/TimberWolfConfig.cmake.in
@@ -4,11 +4,13 @@
 #  TimberWolf_LIBRARIES    - libraries to link against
 
 # Compute paths
-get_filename_component(TimberWolf_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
-set(TimberWolf_INCLUDE_DIRS "@CONF_INCLUDE_DIRS@")
+get_filename_component (TimberWolf_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
+set (TimberWolf_INCLUDE_DIRS "@CONF_INCLUDE_DIRS@")
 
 # Library dependencies (contains definitions for imported targets)
-include("${TimberWolf_CMAKE_DIR}/TimberWolfTargets.cmake")
+if (NOT TARGET TimberWolf AND NOT TimberWolf_BINARY_DIR)
+    include ("${TimberWolf_CMAKE_DIR}/TimberWolfTargets.cmake")
+endif ()
 
 # These are imported targets created by TimberWolfTargets.cmake
 set(TimberWolf_LIBRARIES TimberWolf)
