Moved Doxygen documentation from /docs to /docs/generated, so I can put my plantuml and random other doccy stuff in there.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ TimberWolfConfigVersion.cmake
 TimberWolfTargets.cmake
 Makefile
 Doxyfile
-/docs
+/docs/generated
 /TimberWolf.cbp
 /TimberWolf.layout
