--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -8,7 +8,7 @@ PROJECT_NAME           = @PROJECT_NAME@
 PROJECT_NUMBER         = @PROJECT_VERSION@
 PROJECT_BRIEF          = "@PROJECT_DESCRIPTION@"
 PROJECT_LOGO           =
-OUTPUT_DIRECTORY       = ./docs
+OUTPUT_DIRECTORY       = ./docs/generated
 CREATE_SUBDIRS         = NO
 ALLOW_UNICODE_NAMES    = NO
 OUTPUT_LANGUAGE        = English
