Fixed project file generation (such as Code::Blocks) not receiving a list of header files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -256,7 +256,7 @@ list (APPEND HEADERS
 
 # library output
 set (LIBRARY_NAME "TimberWolf")
-add_library (${LIBRARY_NAME} SHARED ${SOURCES})
+add_library (${LIBRARY_NAME} SHARED ${SOURCES} ${HEADERS})
 set_target_properties (${LIBRARY_NAME} PROPERTIES VERSION ${PROJECT_VERSION})
 set_target_properties (${LIBRARY_NAME} PROPERTIES SOVERSION ${TimberWolf_VERSION_MAJOR})
 set_target_properties (${LIBRARY_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
